testsuite/poke.pkl/try-catch-diag-1.pk
/* { dg-do compile } */

defun foo = int:
  {
   try
     raise 1;
   catch (string e) /* { dg-error "" } */
   {
     defvar foo = 10;
     foo = 20;
   }
   return 666;
  }
